include items and troops filenames to game's .ini file

--- a/gamedata/warband_1154_native/offsets.ini
+++ b/gamedata/warband_1154_native/offsets.ini
@@ -7,3 +7,7 @@ PARTY_2 = "$0"
 PARTY_3 = "$23C"
 PARTY_COUNT = "$c"
 WEAPON_SKILL_LIMIT = "$008EAE98"
+
+[files]
+items=item_kinds1.txt
+troops=troops.txt
